feat(deploy): production-ready Docker setup, environment variables, and bug fixes